[table update for /addon/addontype/discount/inventoryhistory/inventoryvaluationreport/promo/salesinventoryhistory/service/servicepackage/systemlogs]

--- a/views/addon/addonscripts.ejs
+++ b/views/addon/addonscripts.ejs
@@ -16,10 +16,11 @@
                 <td><div class="custom-loader"></div></td>
                 <td><div class="custom-loader"></div></td>
                 <td><div class="custom-loader"></div></td>
+                <td><div class="custom-loader"></div></td>
             </tr>`;
 
     const tbody = $("#datatable tbody");
-    for (let i = 0; i < 7; i++) {
+    for (let i = 0; i < 12; i++) {
       tbody.append(loader);
     }
 
