--- a/views/addontype/addontype.ejs
+++ b/views/addontype/addontype.ejs
@@ -1,22 +1,11 @@
 <!-- Modal -->
-<div
-  class="modal fade"
-  id="editModal"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="exampleModalLabel"
-  aria-hidden="true"
->
+<div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header custom-bg">
         <h5 class="modal-title" id="exampleModalLabel">Add On Type</h5>
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-        >
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -29,28 +18,15 @@
             <div class="row mb-2 justify-content-center">
               <div class="col-md-6">
                 <label class="form-label" for="namemodal">Add On Type</label>
-                <input
-                  autocomplete="off"
-                  id="namemodal"
-                  name="namemodal"
-                  type="text"
-                  class="form-control"
-                  placeholder="Enter new Access name"
-                  aria-label="fullname"
-                  aria-describedby="basic-addon1"
-                />
+                <input autocomplete="off" id="namemodal" name="namemodal" type="text" class="form-control"
+                  placeholder="Enter new Access name" aria-label="fullname" aria-describedby="basic-addon1" />
               </div>
             </div>
           </div>
         </div>
       </div>
       <div class="modal-footer">
-        <button
-          type="button"
-          class="btn btn-outline-inventory"
-          id="closeBtn"
-          data-dismiss="modal"
-        >
+        <button type="button" class="btn btn-outline-inventory" id="closeBtn" data-dismiss="modal">
           Close
         </button>
         <button type="button" id="updateBtn" class="btn btn-outline-inventory">
@@ -75,28 +51,14 @@
             <div class="col-md-8 mb-1">
               <div class="input-group">
                 <div class="input-group-prepend">
-                  <span class="input-group-text" id="basic-addon2"
-                    >Add On:</span
-                  >
+                  <span class="input-group-text" id="basic-addon2">Add On:</span>
                 </div>
-                <input
-                  autocomplete="off"
-                  id="name"
-                  name="name"
-                  type="text"
-                  class="form-control"
-                  placeholder="Enter Add On Name"
-                  aria-label="name"
-                  aria-describedby="basic-addon1"
-                />
+                <input autocomplete="off" id="name" name="name" type="text" class="form-control"
+                  placeholder="Enter Add On Name" aria-label="name" aria-describedby="basic-addon1" />
               </div>
             </div>
-            <div class="col-md-4">
-              <button
-                id="addBtn"
-                name="addBtn"
-                class="btn btn-outline-inventory w-25"
-              >
+            <div class="col-md-3 md-text-right">
+              <button id="addBtn" name="addBtn" class="btn btn-outline-inventory w-50">
                 <i class="fa fa-plus" aria-hidden="true"></i>
                 Add
               </button>
@@ -109,14 +71,8 @@
 
   <div class="card mb-4 cardbody-size-580">
     <div class="progress progress-sm mb-2">
-      <div
-        class="progress-bar"
-        role="progressbar"
-        style="width: 0%"
-        aria-valuenow="0"
-        aria-valuemin="0"
-        aria-valuemax="100"
-      ></div>
+      <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
+        aria-valuemax="100"></div>
     </div>
     <div class="card-header py-3 header-bg">
       <div class="row">
@@ -125,21 +81,10 @@
         </div>
         <div class="col-md-6">
           <div class="input-group">
-            <input
-              autocomplete="off"
-              type="text"
-              class="form-control bg-light small"
-              placeholder="Search for..."
-              aria-label="Search"
-              aria-describedby="basic-addon2"
-              id="search-input"
-            />
+            <input autocomplete="off" type="text" class="form-control bg-light small" placeholder="Search for..."
+              aria-label="Search" aria-describedby="basic-addon2" id="search-input" />
             <div class="input-group-append">
-              <button
-                class="btn sis-btn-color"
-                type="button"
-                id="search-button"
-              >
+              <button class="btn sis-btn-color" type="button" id="search-button">
                 <i class="fas fa-search fa-sm"></i>
               </button>
             </div>
@@ -148,13 +93,8 @@
       </div>
     </div>
     <div class="card-body">
-      <div class="table-responsive scroll-cardbody-size-580">
-        <table
-          class="table table-bordered custom-mobile-table"
-          id="datatable"
-          width="100%"
-          cellspacing="10"
-        >
+      <div class="table-responsive scroll-cardbody-size-580 border">
+        <table class="table table-bordered custom-mobile-table" id="datatable" width="100%" cellspacing="10">
           <thead class="table-header">
             <tr>
               <th>ID</th>
@@ -171,4 +111,3 @@
       </div>
     </div>
   </div>
-
