--- a/views/discount/discount.ejs
+++ b/views/discount/discount.ejs
@@ -241,7 +241,7 @@
       </div>
     </div>
     <div class="card-body">
-      <div class="table-responsive scroll-cardbody-size-710">
+      <div class="table-responsive scroll-cardbody-size-710 border">
         <table
           class="table table-bordered custom-mobile-table"
           id="discount-dataTable"
