--- a/views/inventoryhistory/inventoryhistory.ejs
+++ b/views/inventoryhistory/inventoryhistory.ejs
@@ -36,7 +36,7 @@
             </div>
         </div>
         <div class="card-body">
-            <div class="table-responsive scroll-cardbody-size-710">
+            <div class="table-responsive scroll-cardbody-size-710 border">
                 <table class="table table-bordered custom-mobile-table" id="inventoryhistory-datatable" width="100%"
                     cellspacing="10">
                     <thead class="table-header">
