--- a/views/servicepackage/servicepackagescripts.ejs
+++ b/views/servicepackage/servicepackagescripts.ejs
@@ -16,10 +16,11 @@
                 <td><div class="custom-loader"></div></td>
                 <td><div class="custom-loader"></div></td>
                 <td><div class="custom-loader"></div></td>
+                <td><div class="custom-loader"></div></td>
             </tr>`;
 
     const tbody = $("#datatable tbody");
-    for (let i = 0; i < 7; i++) {
+    for (let i = 0; i < 12; i++) {
       tbody.append(loader);
     }
 
