[added approval for transfer request]-[already deduct inventory on approval]-[can display stocks of FROM branch deduction and stocks]-[no-report]

--- a/views/transferorder/transferorder.ejs
+++ b/views/transferorder/transferorder.ejs
@@ -76,7 +76,7 @@
                                     <tr>
                                         <th class = "col-1">Product ID</th>
                                         <th class = "col-3">Description</th>
-                                        <th class = "col-3">To Transfer</th>             
+                                        <th class = "col-3">To Transfer (Quantity)</th>             
                                         <th class = "col-3">Branch Stock (From)</th>
                                     </tr>
                                 </thead>          
@@ -90,6 +90,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-inventory" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-inventory" id="submitApprove">Approve</button>
             </div>
         </div>
     </div>
