Transfer Order Update
Can now report approved transfer request. Upon reporting it can now validate maximum quantity and upon report success it will now automatically add in inventory id based on productid and branchid receiver[TO]

--- a/views/transferorder/transferorderscripts.ejs
+++ b/views/transferorder/transferorderscripts.ejs
@@ -3,14 +3,18 @@
         //#region Variables
         let transferid = "";
         let fromlocationid = "";
+        let tolocationid = "";
         let status = "";
         let selectedProduct = [];
         let counter = 0;
         let selectedLocations = [];
         //#endregion
 
+        //#region Loading Animaction
         const loader = `  
         <tr id="loading-state">
+            <td><div class="custom-loader"></div></td>
+            <td><div class="custom-loader"></div></td>
             <td><div class="custom-loader"></div></td>
             <td><div class="custom-loader"></div></td>
             <td><div class="custom-loader"></div></td>
@@ -25,6 +29,7 @@
         for (let i = 0; i < 12; i++) {
             tbody.append(loader);
         }
+        //#endregion
 
         //#region Function Calls
         LoadTable();
@@ -32,6 +37,60 @@
         //#endregion
 
         //#region Tables Display and Actions
+        $('#transferorder-dataTable tbody').on('click', 'tr', function () {
+            var dataRow = [];
+            $(this).closest('tr').find('td').each(function () {
+                dataRow.push($(this).text());
+            });
+            // console.log(dataRow);
+            transferid = dataRow[0];
+            fromlocationid = dataRow[1];
+            tolocationid = dataRow[2];
+            status = dataRow[8]
+        })
+
+        $(document).on('click', '#reportTransferBtn', function () {
+            console.log("Transfer ID: ", transferid);
+            // console.log(status);
+            let message = "";
+                        
+            $('#transferarrivalreport tbody tr').each(function () {
+                var quantity = $(this).find('.quantityinput').val();
+                if (quantity == 0) {
+                    message += 'Quantity Cannot be 0, ';
+                }
+            });
+            
+            if (message != '') {
+                warning('Required', `Not Enough Stocks to Transfer: Row ${message}`);
+            } else {
+                $.ajax({
+                    type: 'POST',
+                    url: '/transferorder/report',
+                    data: {
+                        status: status,
+                        branch: tolocationid,
+                        transferid: transferid,
+                    },
+                    success: function (result) {
+                        if (result.msg == 'success') {
+                            LoadTable();
+                            success('Saved', 'Successfully')
+                            $('#transfer-report').modal('hide');
+                        }
+
+                        if (result.msg == 'notexist') {
+                            warning(`${transferid} does not exist!`);
+                        }
+
+                    },
+                    error: function (err) {
+                        errormsg(err);
+                    }
+                })
+            }
+
+        });
         
         $(document).on('click', '#submitApprove', function () {
             console.log("Transfer ID: ", transferid);
@@ -48,7 +107,7 @@
             });
             
             if (message != '') {
-                warning('Required', `Transfer Quantity Cannot be greater than Branch Stocks: At Row ${message}`);
+                warning('Required', `Not Enough Stocks to Transfer: Row ${message}`);
             } else {
                 $.ajax({
                     type: 'POST',
@@ -79,18 +138,9 @@
 
         });
 
-        $('#transferorder-dataTable tbody').on('click', 'tr', function () {
-            var dataRow = [];
-            $(this).closest('tr').find('td').each(function () {
-                dataRow.push($(this).text());
-            });
-            // console.log(dataRow);
-            transferid = dataRow[0];
-            fromlocationid = dataRow[1];
-            status = dataRow[6]
-        })
-
         $(document).on('click', '#approveBtn', function () {
+            console.log("Transfer ID: ", transferid);
+            console.log("branch: ", fromlocationid)
             $.ajax({
                 type: 'POST',
                 url: '/transferorder/getapprovaldetails',
@@ -115,6 +165,53 @@
                         );
 
                         approvaltable.append(tr);
+                    })
+
+                },
+                error: function (err) {
+                    warning(err);
+                }
+            });
+        });
+
+        $(document).on('click', '#reportBtn', function () {
+            $.ajax({
+                type: 'POST',
+                url: '/transferorder/getapprovaldetails',
+                data: {
+                    transferid: transferid,
+                    branchid: fromlocationid
+                },
+                success: function (result) {
+                    const approvaltable = $('#transferarrivalreport tbody');
+                    approvaltable.empty();
+                    console.log(result);
+                    let data = result.data;
+                    $("#transferid-report").val(data[0].transferid)
+                    $("#transferfrom-report-arrival").val(data[0].fromlocation + ` (${data[0].fromid})`)
+                    $("#transferto-report-arrival").val(data[0].tolocation + ` (${data[0].toid})`)
+                    $.each(data, function (key, item) {
+                        let quantityInput = 
+                            `<div class="row justify-content-center">
+                                <input id="quantity_${item.productid}" name="quantity_${item.productid}" type="number" class="form-control w-50 quantityinput"
+                                    placeholder="0.00" value="" maxlength="8">
+                            </div>`;
+                        const tr = $('<tr>').append(
+                            $('<td>', { text: item.productid, 'data-label': 'Product ID', class: 'custom-mobile-align' }),
+                            $('<td>', { text: item.productname, 'data-label': 'Transfer Location', class: 'custom-mobile-align' }),
+                            $('<td>', { text: item.totransferquantity, 'data-label': 'Transfer Date', class: 'custom-mobile-align transferquantity' }),
+                            $('<td>', { html: quantityInput, 'data-label': 'Total Quantity', class: 'custom-mobile-align branchstock' }),
+                        );
+
+                        approvaltable.append(tr);
+
+                        $(`#quantity_${item.productid}`).on('input', function () {
+                            var reportQuantity = parseFloat($(this).val());
+                            if (reportQuantity > item.totransferquantity) {
+                                $(this).val(item.totransferquantity); 
+                                warning("Warning!", "Report quantity cannot exceed expected quantity.");
+                            }
+                        });
                     })
 
                 },
@@ -191,7 +288,7 @@
                                 <button id="cancelBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="cancelBtn">CANCEL</button>`;
 
                     } else if (item.status === 'APPROVED') {
-                        action = `<button id="printBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="printBtn">PRINT</button>`;
+                        action = `<button id="reportBtn" class="btn btn-outline-inventory shadow-sm w-100 mt-1" name="reportBtn" data-toggle="modal" data-target="#transfer-report">REPORT</button>`;
                     }
                     const statusBackground = getStatusBackground(item.status);
                     const containerBackground = getStatusContainerBackground(item.status);
@@ -206,6 +303,8 @@
                         }),
                         $('<td>', { text: item.fromlocationid, 'data-label': 'Transfer Origin', class: 'custom-mobile-align' }),
                         $('<td>', { text: item.tolocationid, 'data-label': 'Transfer Location', class: 'custom-mobile-align' }),
+                        $('<td>', { text: item.fromlocbranchname, 'data-label': 'Transfer Date', class: 'custom-mobile-align' }),
+                        $('<td>', { text: item.tolocbranchname, 'data-label': 'Transfer Date', class: 'custom-mobile-align' }),
                         $('<td>', { text: item.transferdate, 'data-label': 'Transfer Date', class: 'custom-mobile-align' }),
                         $('<td>', { text: item.totalquantity, 'data-label': 'Total Quantity', class: 'custom-mobile-align' }),
                         $('<td>', {
@@ -720,5 +819,6 @@
             });
         }
         //#endregion
+    
     })
 </script>
