--- a/views/transferorder/transferorder.ejs
+++ b/views/transferorder/transferorder.ejs
@@ -96,6 +96,63 @@
     </div>
 </div>
 
+<div class="modal fade " id="transfer-report" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header custom-bg">
+                <h5 class="modal-title" id="exampleModalLabel">Transfer Order</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="custom-modal-body">
+                <div class="card shadow">
+                    <div class="card-header py-3 header-bg">
+                        <h6 class="m-0 font-weight-bold table-title">Transfer Report:</h6>
+                    </div>
+                    <div class="card-body">
+                        <div class="row mb-2 justify-content-center">
+                            <div class="col-md-6">
+                                <label class="form-label" for="transferid-report">Transfer ID:</label>
+                                <input autocomplete="off" id="transferid-report" name="transferid-report" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                            </div>
+                        </div>
+                        <div class="row mb-2">
+                            <div class="col-md-6">
+                                <label class="form-label" for="transferfrom-report-arrival">Transfer From:</label>
+                                <input autocomplete="off" id="transferfrom-report-arrival" name="transferfrom-report" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                            </div>
+                            <div class="col-md-6">
+                                <label class="form-label" for="transferto-report-arrival">Transfer To:</label>
+                                <input autocomplete="off" id="transferto-report-arrival" name="transferto-report-arrival" type="text" class="form-control"aria-label="fullname" aria-describedby="basic-addon1" disabled>        
+                            </div>
+                        </div>
+                        <div class="table-responsive scrollable-table-container border">
+                            <table class="table table-bordered custom-mobile-table" id="transferarrivalreport" width="100%" cellspacing="10">
+                                <thead class="table-header">
+                                    <tr>
+                                        <th class = "col-1">Product ID</th>
+                                        <th class = "col-3">Description</th>
+                                        <th class = "col-3">Expected Quantity</th>             
+                                        <th class = "col-3">Quantity Arrived</th>
+                                    </tr>
+                                </thead>          
+                                <tbody>
+                                </tbody>
+                            </table>
+                        </div>
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-inventory" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-inventory" id="reportTransferBtn">Report</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Begin PCreated by Content -->
 <div class="container-fluid">
     <!-- Content Row -->
@@ -232,14 +289,16 @@
             <table class="table table-bordered custom-mobile-table" id="transferorder-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
-                        <th class = "col-1">Transfer ID</th>
-                        <th class = "col-2">Transfer From</th>
-                        <th class = "col-2">Transfer To</th>
-                        <th class = "col-1">Transfer Date</th>
-                        <th class = "col-1">Total Quantity</th>
-                        <th class = "col-3">Notes</th>
-                        <th class = "col-1">Status</th>
-                        <th class = "col-1">Action</th>               
+                        <th class="col-1">ID</th>
+                        <th class="col-1">Sender ID</th>
+                        <th class="col-1">Receiver ID</th>
+                        <th class="col-2">From</th>
+                        <th class="col-2">To</th>
+                        <th class="col-1">Transfer Date</th>
+                        <th class="col-1">Quantity</th>
+                        <th class="col-1">Notes</th>
+                        <th class="col-1">Status</th>
+                        <th class="col-1"></th>               
                     </tr>
                 </thead>
                     
