Update transfer order script and Minor adjustment to text displays
Added deletion of row in selected product in transfer request table/n Text correction at:/n Products/n Purchaseorder

--- a/views/products/products.ejs
+++ b/views/products/products.ejs
@@ -173,7 +173,7 @@
                 	</button>
                 <% } %>
 
-                <h6 class="mt-2 ml-3 font-weight-bold table-title">Products Data</h6> 
+                <h6 class="mt-2 ml-3 font-weight-bold table-title">Products</h6> 
             </div>
             <div class="col-md-8">
                 <div class="input-group">
@@ -194,14 +194,14 @@
             <table class="table custom-mobile-table" id="products-dataTable" width="100%" cellspacing="10">
                 <thead class="table-header">
                     <tr>
-                        <th>Product ID</th>
-                        <th>Product Image</th>
+                        <th>ID</th>
+                        <th>Image</th>
                         <th>Description</th>
                         <th>Price</th>
                         <th>Category</th>
                         <th>Barcode</th>
                         <th>Created by</th>
-                        <th>Created date</th>
+                        <th>Created Date</th>
                         <th class="col-1">Status</th>
                         <th class="col-1"></th>               
                     </tr>
