--- a/views/purchaseorder/purchaseorder.ejs
+++ b/views/purchaseorder/purchaseorder.ejs
@@ -272,9 +272,9 @@
                     <thead class="table-header">
                         <tr>
                             <th class="col-1">Order ID</th>
-                            <th class="col-1">Vendor ID</th>
-                            <th class="col-1">Order Date</th>
-                            <th class="col-1">Delivery Date</th>
+                            <th class="col-2">Vendor</th>
+                            <th class="col-2">Order Date</th>
+                            <th class="col-2">Delivery Date</th>
                             <th class="col-1">Total Amount</th>
                             <th class="col-1">Payment Terms</th>
                             <th class="col-1">Delivery Method</th>
