--- a/views/shiftreports/shiftreports.ejs
+++ b/views/shiftreports/shiftreports.ejs
@@ -12,7 +12,7 @@
                 </div>
                 <div class="col-md-8">
                     <div class="row d-flex justify-content-end">
-                        <div class="col-9">
+                        <div class="col-md-7">
                             <div class="input-group">
                                 <input autocomplete="off" type="text" class="form-control bg-light small"
                                     placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2"
@@ -24,7 +24,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-3">
+                        <div class="col-md-3">
                             <div class="row d-flex justify-content-end">
                                 <div class="dropdown no-arrow">
                                     <button class="btn btn-outline-inventory dropdown-toggle ani-btn" type="button"
@@ -186,10 +186,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <button class="btn btn-outline-inventory ml-2" id="export-button">
-                                    <i class="fas fa-download fa-sm"></i>
-                                </button>
                             </div>
+                        </div>
+                        <div class="col-md-2">
+                            <button class="btn btn-outline-inventory ml-2" id="export-button">
+                                <i class="fas fa-download fa-sm"></i>
+                            </button>
                         </div>
                     </div>
                 </div>
