--- a/views/sidebar.ejs
+++ b/views/sidebar.ejs
@@ -303,7 +303,7 @@
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Inventory History</span>
         </a>
-        <a class="collapse-item" href="#">
+        <a class="collapse-item" href="/productionhistory">
           <i class="far fa-circle mr-1 sb-icon-clr"></i>
           <span>Production history</span>
         </a>
